--- a/public/register.html
+++ b/public/register.html
@@ -40,7 +40,7 @@
         <div class='my-3' id="form-alert">
 
         </div>
-        <form id="register" rs>
+        <form id="register" >
             <div class="form-group">
                 <label for='first'>First Name</label>
                 <input type="text" class="form-control" id="first" name="first">
@@ -52,6 +52,7 @@
             <div class="form-group">
                 <label for='email'>Email Address</label>
                 <input type="email" class="form-control" id="email" name="email">
+                <div class=''id="email-alert"></div>
             </div>
             <div class="form-group">
                 <label for='username'>Username</label>
@@ -103,13 +104,41 @@
                 $("#password-alert").html(`<div class="alert alert-success" role="alert">Passwords match!</div>`)
             }
 
+        });
+
+        $("#email").on("change", event => {
+            let email = event.target.value;
+            
+            if (!validEmail(email)) {
+                $("#email-alert").html(`<div class="alert alert-danger" role="alert">Not a valid email address</div>`);
+                setTimeout(() => {
+                    $("#email-alert").empty();
+                })
+            } else {
+                let data = {
+                    email: email
+                }
+
+                   $.ajax({
+                    type: "POST",
+                    contentType: "application/json",
+                    url: "http://localhost:3000/users/email",
+                    data: JSON.stringify(data)
+                }).then((results) => {
+
+                    if (results === "Cannot use this email address.") {
+                        $("#email-alert").html(`<div class="alert alert-danger" role="alert">${results}</div>`);
+                    } else {
+                        $("#email-alert").empty();
+                    }
+
+                })
+            }
         })
 
         $("#username").on("change", event => {
             let userName = event.target.value;
             console.log(userName);
-
-        
 
             if (userNameNum(userName) === false || userNameLetter(userName) === false || userName.length === 0) {
                 $("#username-alert").html(`<div class="alert alert-danger" role="alert">Username must contain at least one number and at least letter</div>`);
@@ -135,8 +164,6 @@
 
             }
 
-
-
         });
 
 
@@ -151,13 +178,13 @@
 
             if (first === "" || last === "" || email === "" || username === "" || password1 === "" || password2 === "") {
                 $("#form-alert").empty();
-                $("#form-alert").append(`<div class="alert alert-danger" role="alert">Please enter all Ninja inputs!</div>`);
+                $("#form-alert").html(`<div class="alert alert-danger" role="alert">Please enter all Ninja inputs!</div>`);
             }
 
 
             if (password1 !== password2 || password1.length < 5 || numberCounter(password1) === 0 || specLetterCounter(password1, specialLetters) === 0 || upperCaseCounter(password1) === 0) {
                 $("form-alert").empty();
-                $("#form-alert").append(`<div class="alert alert-danger" role="alert"><p>Password must contain at least 1 uppercase letter</p><p>Password must contain both letters and numbers</p> <p>Password must contain at least 1 special character i.e "!,#$.."</p><p>Password must be at least 5 characters long</p></div>`);
+                $("#form-alert").html(`<div class="alert alert-danger" role="alert"><p>Password must contain at least 1 uppercase letter</p><p>Password must contain both letters and numbers</p> <p>Password must contain at least 1 special character i.e "!,#$.."</p><p>Password must be at least 5 characters long</p></div>`);
 
             } else {
 
@@ -180,6 +207,7 @@
                     $("#register")[0].reset();
                     $("#form-alert").empty();
                     $("#password-alert").empty();
+                    $("#username-alert").empty();
 
                     $("#alert-space").html(`<div class="alert alert-success" role="alert">${results}</div>`);
                     setTimeout(() => {
@@ -191,12 +219,27 @@
 
         });
 
+        const validEmail = (email) => {
+            let atSymbolCount = 0;
+            for (let i = 0; i < email.length; i++) {
+                if (email[i] === "@") {
+                    atSymbolCount += 1;
+                }
+            }
+
+            if (atSymbolCount === 1) {
+                return true
+            }
+
+            return false;
+        }
+
         const userNameNum = (username) => {
             for (let i = 0; i < username.length; i++) {
-               if (!isNaN(parseInt(username[i]))) {
-                   return true;
-               }
-            }   
+                if (!isNaN(parseInt(username[i]))) {
+                    return true;
+                }
+            }
             return false;
         }
 
