--- a/public/login.html
+++ b/public/login.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
-        integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
+        crossorigin="anonymous">
     <link rel="stylesheet" href="./css/style.css">
     <title>Trade Ninja</title>
 </head>
@@ -56,18 +56,15 @@
 
 
 
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
-        integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
         crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
         crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
-        integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
         crossorigin="anonymous"></script>
     <!-- jQuery -->
-    <script src="https://code.jquery.com/jquery-3.4.1.js"
-        integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.js" integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
+        crossorigin="anonymous"></script>
 
     <script type='text/javascript'>
 
@@ -89,17 +86,30 @@
                 url: "http://localhost:3000/auth",
                 data: JSON.stringify(data)
 
-            }).then((err, results) => {
-                if (err) {
-                    $("#alert-space").append(`<div class="alert alert-danger" role="alert">${err.message}</div>`)
-                }
-               
+            }).then((results) => {
+                console.log(results)
 
-                $("#alert-space").append(`<div class="alert alert-success" role="alert">${results}</div>`);
-                setTimeout(() => {
-                    $("#alert-space").empty();
-                    window.location = "./portfolio.html"
-                }, 3000);
+                if (results === "Username does not exist") {
+                    $("#alert-space").html(`<div class="alert alert-warning" role="alert">${results}</div>`);
+                    setTimeout(() => {
+                        $("#alert-space").empty();
+                    }, 3000);
+                }
+
+                if (results === "Invalid credentials!") {
+                     $("#alert-space").htm(`<div class="alert alert-danger" role="alert">${results}</div>`);
+                    setTimeout(() => {
+                        $("#alert-space").empty();
+                    }, 3000);
+                }
+
+                if (results === "Login successful!") {
+                       $("#alert-space").html(`<div class="alert alert-success" role="alert">${results}</div>`);
+                    setTimeout(() => {
+                       window.location = "about.html"
+                    }, 3000);
+                }
+
             })
         })
 
